# authz

./: .dockerignore  .gitattributes  .gitignore  README.md  apps.yaml  catalog-info.yaml  mkdocs.yaml  regal.yaml
.devcontainer/: Dockerfile  collector.yml  config.yml  devcontainer-lock.json  devcontainer.json  docker-compose.yml  opa.yml  prometheus.yml
.github/: dependabot.yml
.github/workflows/: _bundler_container.yaml  _bundler_docs.yaml  _bundler_lint.yaml  _bundler_sqlx.yaml  _bundler_test.yaml  _commit_lint.yaml  _devcontainer.yaml  _docs_build.yaml  _docs_lint.yaml  _helm_chart_lint.yaml  _helm_chart_publish.yaml  _pages_build.yaml  _pages_publish.yaml  _policy_container.yaml  _policy_lint.yaml  _policy_test.yaml  _techdocs_publish.yaml  bunder-container.yml  bundler-code.yml  bundler-docs.yml  ci.yaml  devcontainer.yml  docs.yml  helm-charts.yml  opa-chart.yml  policy-code.yml  policy-container.yml  publish-docs.yml  user-docs.yml
bundler/: .dockerignore  Cargo.toml  Dockerfile  README.md  deny.toml
bundler/.sqlx/: query-047eb6d48708efb6901bbcc7d1375ad4c01aaadba3026ad73b752f3d9b946370.json  query-06d74f40924fd1f75c561fe04bc40077bf4ab8409c4fc9fea24417835c53690f.json  query-3a89294c5bacbfd35cd203785f9d2f1b140618087beb7fa69ee8bd8bcb910b4d.json  query-6413070d8046b220590b973b6a00f01e2678582083dccc5acf978c9eb56471fb.json  query-7ec83d6ddd963ad112f6a4e8f3a9240fb0a8e69be2d52b50460893e24f2bedaa.json  query-fc4452723d0bdcc324a4b34683b404abb3601b1d5af3fa459582a99689bcb1aa.json
bundler/src/: bundle.rs  main.rs  require_bearer.rs
bundler/src/permissionables/: beamlines.rs  mod.rs  permissions.rs  proposals.rs  sessions.rs
bundler/src/permissionables/subjects/: mod.rs  permissions.rs  proposals.rs  sessions.rs
bundler/tests/fixtures/: beamline_sessions.sql  group_permissions.sql  permissions.sql  persons.sql  proposal_membership.sql  proposals.sql  session_membership.sql  user_group_membership.sql  user_groups.sql
bundler/tests/migrations/: 1_CopyISPyBTables.sql
charts/agent/: Chart.yaml  values.yaml
charts/agent/templates/: _helpers.tpl  opal_deployment.yaml  opal_hpa.yaml  opal_service.yaml  opal_serviceaccount.yaml
charts/apps/: Chart.yaml  values.yaml
charts/apps/static/: admin.json
charts/apps/templates/: bundler-app.yaml  bundler-static-data.yaml  opa-app.yaml  opa-authn-app.yaml  opa-id-app.yaml  openfga-app.yaml  token-authorization-secret.yaml
charts/bundler/: Chart.yaml  values.yaml
charts/bundler/static/: admin.json
charts/bundler/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ghcr.yaml  hpa.yaml  ingress.yaml  ispyb.yaml  service.yaml  serviceaccount.yaml  static_config.yaml  token-authorization.yaml
charts/opa/: Chart.yaml  values.yaml
charts/opa/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  opa-config.yaml  service.yaml  serviceaccount.yaml
charts/warehouse/: Chart.yaml  values.yaml
charts/warehouse/templates/: _helpers.tpl  bundler_deployment.yaml  bundler_hpa.yaml  bundler_ingress.yaml  bundler_service.yaml  github.yaml  oapl_service.yaml  opal_deployment.yaml  opal_hpa.yaml  opal_ingress.yaml  opal_serviceaccount.yaml
docs/: index.md  requirements.txt
docs/common/: complete-config-example.md
docs/explanations/: data-flow.md
docs/how-tos/: authorize-on-proposals.md  authorize-on-sessions.md  build-opa-bundle.md  build-package-policy.md  configure-opa.md  deploy-docker-compose.md  deploy-with-helm.md  deploy-with-istio.md  integrate-envoy.md  integrate-istio.md  integrate-python.md  integrate-rust.md  lint-test-policy.md  python-example.md  use-diamond-attributes.md  use-permissionables.md  verify-cas-access-token.md  verify-json-web-token.md  write-opa-policy.md  write-policy.md
docs/references/: building-policy.md  organisational-policy.md  permissionables-bundle.md  publishing-policy.md
my_policy/: .manifest  opa.project
my_policy/src/: example.rego
my_policy/test/: example_test.rego
org-policy/: .manifest  opa.project  proposal.rego  proposal_test.rego  session.rego  session_test.rego  test.rego  test_test.rego  token.rego  user_permissions.rego  user_permissions_test.rego
org-policy/schemas/: beamlines.json  proposals.json  sessions.json  subjects.json
org-policy/src/: user_permissions.rego
org-policy/test/: user_permissions_test.rego
policy/diamond/policy/admin/: admin.rego  (+1 more)
static/: admin.json
(+14 files in other folders)
