[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.89" }
axum = { version = "0.7.7" }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
clap = { version = "4.5.18", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
dotenvy = { version = "0.15.7" }
flate2 = { version = "1.0.34" }
headers = { version = "0.4.0" }
humantime = { version = "2.1.0" }
opentelemetry = { version = "0.26.0" }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "tokio"] }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
schemars = { version = "0.8.21" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
sqlx = { version = "0.8.2", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
] }
tar = { version = "0.4.42" }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.1" }
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-opentelemetry = { version = "0.26.0" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.2" }

[build-dependencies]
built = { version = "0.7.4" }
