[package]
name = "bundler"
version = "0.1.0"
edition = "2021"
license-file = "../LICENSE"

[dependencies]
anyhow = { version = "1.0.95" }
axum = { version = "0.7.9" }
axum-extra = { version = "0.9.4", features = ["typed-header"] }
clap = { version = "4.5.28", features = ["derive", "env"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
derive_more = { version = "2.0.1", features = ["deref", "deref_mut", "as_ref"] }
dotenvy = { version = "0.15.7" }
flate2 = { version = "1.0.35" }
glob = "0.3.2"
headers = { version = "0.4.0" }
humantime = { version = "2.1.0" }
opentelemetry = { version = "0.23.0" }
opentelemetry-otlp = { version = "0.16.0", features = ["metrics", "tokio"] }
opentelemetry-semantic-conventions = { version = "0.15.0" }
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
schemars = { version = "0.8.21" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.138" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
] }
tar = { version = "0.4.43" }
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2" }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41" }
tracing-opentelemetry = { version = "0.24.0" }
tracing-subscriber = { version = "0.3.19" }
url = { version = "2.5.2" }

[build-dependencies]
built = { version = "0.7.6" }
